' Copyright (C) 2019 - present Juergen Zimmermann, Hochschule Karlsruhe
'
' This program is free software: you can redistribute it and/or modify
' it under the terms of the GNU General Public License as published by
' the Free Software Foundation, either version 3 of the License, or
' (at your option) any later version.
'
' This program is distributed in the hope that it will be useful,
' but WITHOUT ANY WARRANTY; without even the implied warranty of
' MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
' GNU General Public License for more details.
'
' You should have received a copy of the GNU General Public License
' along with this program.  If not, see <https://www.gnu.org/licenses/>.
@startuml KundeModel

skinparam classAttributeIconSize 0
' skinparam monochrome true

package java {
    package util {
        interface List<T>
        class URL
    }

    package time {
        class LocalDate
    }

    URL .[hidden].> LocalDate
}

package org.springframework.hateoas {
    class RepresentationModel<T>
}

package com.acme.kunde {
    package entity {
        class Kunde
        class Umsatz
        class Adresse

        enum GeschlechtType
        enum FamilienstandType
        enum InteresseType
    }

    package rest #DDDDDD {
        class KundeModel << entity >> {
            readonly nachname : String
            readonly email : String
            readonly kategorie: Int
            readonly hasNewsletter : Boolean
            readonly geburtsdatum: LocalDate
            readonly homepage: URL
            readonly geschlecht: GeschlechtType
            readonly familienstand: FamilienstandType
            readonly interessen: List<InteresseType>
        }

        KundeModel *--> "0..1" Umsatz : umsatz
        KundeModel *--> "1" Adresse : adresse
        KundeModel ..> GeschlechtType
        KundeModel ..> FamilienstandType
        KundeModel ..> InteresseType

        KundeModel -up-|> RepresentationModel

        KundeModel ..> Kunde
        KundeModel .right.> LocalDate
        KundeModel ..> URL
        KundeModel .right.> List
    }
}

hide empty members

footer (c) Jürgen Zimmermann

@enduml
